RESOLVED FIXED117170
fourthTier: all cached put_by_id transitions, even ones that weren't inlined by the DFG, should be propagated by the GC
https://bugs.webkit.org/show_bug.cgi?id=117170
Summary fourthTier: all cached put_by_id transitions, even ones that weren't inlined ...
Filip Pizlo
Reported 2013-06-03 14:49:54 PDT
This should keep more structures alive.
Attachments
the patch (10.96 KB, patch)
2013-06-03 14:50 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-06-03 14:50:46 PDT
Created attachment 203630 [details] the patch
Mark Hahnenberg
Comment 2 2013-06-03 15:00:08 PDT
Comment on attachment 203630 [details] the patch r=me
Filip Pizlo
Comment 3 2013-06-03 17:11:40 PDT
Note You need to log in before you can comment on or make changes to this bug.